Add resource-type endpoints
