# swagger/pagination.yaml
@@ -46,6 +46,16 @@ components:
           $ref: '#/components/schemas/PerPage'
         total:
           $ref: '#/components/schemas/Total'
+    ResourceTypesPaginationOut:
+      type: object
+      required:
+        - meta
+        - links
+      properties:
+        meta:
+          $ref: '#/components/schemas/Meta'
+        links:
+          $ref: '#/components/schemas/Links'
     Total:
       type: integer
       description: Total number of items
@@ -58,3 +68,33 @@ components:
     PerPage:
       type: integer
       description: The number of items to return per page
+    Meta:
+      description: The metadata for resource-types responses
+      type: object
+      required:
+        - count
+      properties:
+        count:
+          description: The total number of objects returned by the query.
+          type: string
+    Links:
+      description: A collection of pagination links for resource-types endpoints
+      type: object
+      required:
+        - first
+        - previous
+        - next
+        - last
+      properties:
+        first:
+          description: The URI path for the first page in the pagination
+          type: string
+        previous:
+          description: The URI path for the previous page in the pagination
+          type: string
+        next:
+          description: The URI path for the next page in the pagination
+          type: string
+        last:
+          description: The URI path for the last page in the pagination
+          type: string
